@@ -58,4 +58,18 @@ is_deeply(
 
 ok( $obj = MODULE->new( 'config/libs.yaml', 1 ), MODULE . '->new( "libs.yaml", 1 )' );
 
+$obj = MODULE->new( 'config/app.yaml', 1 );
+my $nested = $obj->get('nested');
+$nested->{something}{else} = 'different';
+
+is_deeply(
+    $obj->get('nested'),
+    {
+        something => {
+            else => 'good',
+        },
+    },
+    'Returned data is a copy; not a ref to original',
+);
+
 done_testing;
